--- a/bus-ticket-client-pipeline/Dockerfile
+++ b/bus-ticket-client-pipeline/Dockerfile
@@ -1,12 +1,6 @@
 # build stage
-FROM node:16-alpine as build-stage
+FROM node:16-alpine
 WORKDIR /app
 COPY . .
 RUN yarn ci
-RUN npm run build
-
-# production stage
-FROM nginx:1.17-alpine as production-stage
-COPY --from=build-stage /app/build /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-CMD ["nginx", "-g", "daemon off;"]
+CMD yarn start
